--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
        Correo: edisen.rincon@gmail.com 
        Skype: luigye68@hotmail.com 
     </p>
+    <a href="Fase2/desing.html">Actividad correspondiente a la fase 2</a>
     
 </body>
 </html>
