--- a/Fase3/Recursos Posicionamiento Digital.html
+++ b/Fase3/Recursos Posicionamiento Digital.html
@@ -107,17 +107,14 @@
             </nav>
             <div class="Contenedor">
                 <section>
-                    <br>
+                    <br><br>
                     <CENTER>
                         <h1>Recursos Digitales Framework CSS</h1>
                     </CENTER>
+                    <br><br><br><br><br>
                     <center>
-                        <article>
-                            <iframe width="840" height="450" src="https://www.youtube.com/embed/sow2RILd6mg"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </article>
+                        <iframe id='audio_68375245' frameborder='0' allowfullscreen='' scrolling='no' height='200'
+                            style='width:80%;' src='https://co.ivoox.com/es/player_ej_68375245_6_1.html'></iframe>
                     </center>
 
 
