--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        Correo: edisen.rincon@gmail.com 
        Skype: luigye68@hotmail.com 
     </p>
-    <a href="Fase3/desing.html">Actividad correspondiente a la fase 3</a>
+    <a href="Fase3/">Actividad correspondiente a la fase 3</a>
     
     
 </body>
