--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
        Correo: edisen.rincon@gmail.com 
        Skype: luigye68@hotmail.com 
     </p>
+    <a href="Fase2/desing.html">Actividad correspondiente a la fase 2</a>
     <a href="Fase3/Inicio.html">Actividad correspondiente a la fase 3</a>
+    <a href="Fase4/Inicio.html">Actividad correspondiente a la fase 4</a>
     
     
 </body>
