--- a/Fase4/AprendizajeActividad1.html
+++ b/Fase4/AprendizajeActividad1.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -107,10 +110,16 @@
             </nav>
             <div class="Contenedor">
                 <section>
-                    <br><br><br>
 
                     <CENTER>
                         <h1>APRENDIZAJE ACTIVIDAD NÚMERO 1</h1>
+                        <h2>Examen de conocimiento Recursos Framework</h2>
+                        <article>
+                            <iframe
+                                src="https://docs.google.com/forms/d/e/1FAIpQLSfqtf6MK0sj-WklAlPjzYOHb5XtyHmyrfOCGZqoIERaFFXflA/viewform?embedded=true"
+                                width="900" height="400" frameborder="0" marginheight="0"
+                                marginwidth="0">Cargando…</iframe>
+                        </article>
                     </CENTER>
                 </section>
                 <aside>
@@ -126,10 +135,8 @@
             </div>
 
             <footer>
-                <h6>Autor: Edisen Rincón Arévalo<br>
-                    Skipe: luigye68@hotmail.com <br>
-                    correo: enrincona@unadvirtual.edu.co <br>
-                    Fecha actualización 09 de Abril del 2021
+                <h7>Autor: Edisen Rincón Arévalo //  Skipe: luigye68@hotmail.com <br>
+                    correo: enrincona@unadvirtual.edu.co // Fecha actualización 09 de Abril del 2021
             </footer>
 
 
