--- a/Fase4/AprendizajeActividad2.html
+++ b/Fase4/AprendizajeActividad2.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 
 <body>
@@ -107,10 +109,17 @@
             </nav>
             <div class="Contenedor">
                 <section>
-                    <br><br><br>
+                    
 
                     <CENTER>
                         <h1>APRENDIZAJE ACTIVIDAD NÚMERO 2</h1>
+                        <h2>Examen de conocimiento Recursos Framework</h2>
+                        <Article>
+                            <iframe
+                                src="https://docs.google.com/forms/d/e/1FAIpQLSdlqR7od7UcHqSRHt95hl4kyV-P4tHpgobxMP-ngA1eGPhk1Q/viewform?embedded=true"
+                                width="900" height="400" frameborder="0" marginheight="0"
+                                marginwidth="0">Cargando…</iframe>
+                        </Article>
                     </CENTER>
 
                 </section>
@@ -127,9 +136,9 @@
             </div>
 
             <footer>
-                <h6>Autor: Edisen Rincón Arévalo <br>
+                <h6>Autor: Edisen Rincón Arévalo //
                     Skipe: luigye68@hotmail.com <br>
-                    correo: enrincona@unadvirtual.edu.co <br>
+                    correo: enrincona@unadvirtual.edu.co //
                     Fecha actualización 09 de Abril del 2021
             </footer>
 
